# nanoflow

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Justfile  README.md  action.yml  pyproject.toml  releaserc.toml
.github/: PULL_REQUEST_TEMPLATE.md  codecov.yml
.github/workflows/: codestyle.yml  coverage.yml  publish.yml  release.yml  test.yml
examples/: simple.toml
nanoflow/: __init__.py  __main__.py  cli.py  config.py  resource_pool.py  task.py  tui.py  utils.py  workflow.py
tests/: test_e2e.py
